attempt to make particle handling more thread safe